<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">µWidgets</string>
    <string name="widget_label">Weather</string>
    <string name="weather_unavailable">Weather unavailable</string>
    <string name="settings_show_condition">Show condition</string>
    <string name="settings_unit_title">Temperature unit</string>
    <string name="settings_unit_auto">Automatic (follow system)</string>
    <string name="settings_unit_celsius">Celsius (°C)</string>
    <string name="settings_unit_fahrenheit">Fahrenheit (°F)</string>
    <string name="settings_dynamic_color">Use wallpaper color</string>
    <string name="settings_font_size">Font size</string>
    <string name="font_size_value">%1$d sp</string>
    <string name="settings_text_align">Text alignment</string>
    <string name="align_left">Left</string>
    <string name="align_center">Center</string>
    <string name="align_right">Right</string>
    <string name="settings_tap_action">Weather tap action</string>
    <string name="tap_action_refresh">Refresh weather</string>
    <string name="tap_action_launch">Launch %1$s</string>
    <string name="main_hint">Add the Weather widget to your home screen.</string>
    <string name="permission_granted">Location permission granted.</string>
    <string name="permission_denied">Location permission denied. Tap to grant.</string>
    <string name="placeholder_temperature">--°</string>
    <string name="alarm_widget_label">Alarm</string>
    <string name="alarm_none">No alarm</string>
    <string name="alarm_tomorrow">Tomorrow</string>
    <string name="settings_alarm_tap_action">Alarm tap action</string>
    <string name="alarm_tap_default">Clock app</string>
    <string name="background_location_title">Allow location all the time</string>
    <string name="background_location_message">The weather widget may not update to your location properly if background location permission is not granted all the time; it is recommended to turn this setting on.</string>
    <string name="background_location_open_settings">Open Settings</string>
    <string name="background_location_dismiss">Not now</string>
    <string name="background_data_title">Allow background data</string>
    <string name="background_data_message">The weather widget may stop updating on metered networks (such as mobile data or a Wi‑Fi hotspot) if background data is not allowed; it is recommended to turn this setting on.</string>
    <string name="settings_version">Version %1$s</string>
</resources>
